[gd_scene load_steps=2 format=3 uid="uid://c1dfish0ow7cu"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Game/ChoiceControl/ChoiceControl.gd" id="1_efjce"]

[node name="ChoiceItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_efjce")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
